--- a/AngularApp/src/app/app.component.html
+++ b/AngularApp/src/app/app.component.html
@@ -42,9 +42,10 @@
     <p class="text-success fw-bold">Add New Clinic Service</p>
     <app-employee-create></app-employee-create>  
 </div> -->
-<div>
+<!-- <div>
     <app-home></app-home>
-</div>
-<!-- <div class="fw-bold m-2">
-    <router-outlet></router-outlet>
 </div> -->
+<div class="fw-bold m-2">
+    <router-outlet></router-outlet>
+</div>
+<!-- <app-appointment-create></app-appointment-create> -->
