--- a/AngularApp/src/app/Appointment/appointment-read/appointment-read.component.html
+++ b/AngularApp/src/app/Appointment/appointment-read/appointment-read.component.html
@@ -11,6 +11,11 @@
             <i appSortParams class="fa fa-arrow-down sorting" (click)="sortDocIdDesc()"></i>
         </th>
         <th>
+            <label class="fw-bold">PatientId</label>
+            <i appSortParams class="fa fa-arrow-up" (click)="sortPatIdAsc()"></i>
+            <i appSortParams class="fa fa-arrow-down sorting" (click)="sortPatIdDesc()"></i>
+        </th>
+        <th>
             <label>StartTime</label>
             <i appSortParams class="fa fa-arrow-up" (click)="sortStTimeAsc()"></i>
             <i appSortParams class="fa fa-arrow-down sorting" (click)="sortStTimeDesc()"></i>
@@ -35,7 +40,8 @@
     <tr
         *ngFor="let appoint of (appointmentService.AppiontList|filterbySpeciality:searchValue|sortComponent:direction:column:type)">
         <td>{{appoint._id}}</td>
-        <td>{{appoint.doctorId}}</td>
+        <td>{{appoint.doctorId.doctorName}}</td>
+        <td>{{appoint.patientId?.patientName}}</td>
         <td>{{appoint.startTime}}</td>
         <td>{{appoint.endTime}}</td>
         <td>{{appoint.medicalSpecialty}}</td>
