--- a/AngularApp/src/app/Invoice/invoice-create/invoice-create.component.html
+++ b/AngularApp/src/app/Invoice/invoice-create/invoice-create.component.html
@@ -4,7 +4,8 @@
         <label style=" width: 100px;">Id </label>
         <input name="id" type="text" [(ngModel)]="InvoiceService.nInvoice._id" required><br><br>
         <label style="width: 100px;">PatientId </label>
-        <input name="patientId" type="text" [(ngModel)]="InvoiceService.nInvoice.patientId" required><br><br>
+        <input name="patientId" type="text" [(ngModel)]="InvoiceService.nInvoice.patientId.patientName"
+            required><br><br>
         <label style="width: 100px;">tax Of Bill </label>
         <input name="Tax" type="text" [(ngModel)]="InvoiceService.nInvoice.taxOfBill" required><br><br>
         <label style="width: 100px;">date Of Bill </label>
