--- a/AngularApp/src/app/Core/admin-dashboard/admin-dashboard.component.html
+++ b/AngularApp/src/app/Core/admin-dashboard/admin-dashboard.component.html
@@ -13,7 +13,7 @@
             <!-- Navbar-->
             <ul class="navbar-nav position-absolute bottom-0 end-0">
                 <li class="nav-item dropdown">
-                    <a class="nav-link" id="navbarDropdown" href="#" role="button" aria-expanded="false">Log Out <i class="fa fa-sign-out" aria-hidden="true"></i></a>
+                    <a class="nav-link" id="navbarDropdown" href="#" role="button" aria-expanded="false" (click)="logOut()">Log Out <i class="fa fa-sign-out" aria-hidden="true"></i></a>
                 </li>
             </ul>
         </nav>
