--- a/AngularApp/src/app/home/home.component.html
+++ b/AngularApp/src/app/home/home.component.html
@@ -52,51 +52,7 @@
                 <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
                     <h3 class="register-heading">Sign In</h3>
                     <div class="row register-form">
-                        <form class="container" #form="ngForm">
-                            <div class="col-md-12">
-                                <div class="form-group">
-                                    <input type="text" name="username" class="form-control" placeholder="UserName *"
-                                        [(ngModel)]="userName" required />
-                                </div>
-                                <div class="form-group">
-                                    <input type="password" name="password" class="form-control" placeholder="Password *"
-                                        [(ngModel)]="passWord" required />
-                                </div>
-                                <div class="form-group" style="margin: 1px 23%;">
-                                    <div class="maxl">
-                                        <label class="radio  col-md-4">
-                                            <input type="radio" name="type" [(ngModel)]="type" value="Reciptionist">
-                                            <span> Recipt </span>
-                                        </label>
-                                        <label class="radio  col-md-4">
-                                            <input type="radio" name="type" value="Nurse" [(ngModel)]="type" required>
-                                            <span>Nurse </span>
-                                        </label>
-                                        <label class="radio  col-md-4">
-                                            <input type="radio" name="type" value="Admin" [(ngModel)]="type">
-                                            <span>Admin </span>
-                                        </label>
-                                        <br>
-                                        <label class="radio col-md-4">
-                                            <input type="radio" name="type" value="doctor" [(ngModel)]="type">
-                                            <span>Doctor </span>
-                                        </label>
-                                        <label class="radio  col-md-6">
-                                            <input type="radio" name="type" value="Office Boy" [(ngModel)]="type">
-                                            <span>Office Boy </span>
-                                        </label>
-                                        <br>
-                                        <label class="radio  col-md-6">
-                                            <input type="button" name="sign" [disabled]="form.invalid"
-                                                class="btnRegister" value="Sign" (click)="sign()">
-                                        </label>
-                                        <div *ngIf="logged==false" style="color: red; margin-left: 15%;">
-                                            Inavlid Username or Password
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </form>
+                       <app-sign-in></app-sign-in>
                     </div>
                 </div>
 
