--- a/AngularApp/src/app/home/home.component.html
+++ b/AngularApp/src/app/home/home.component.html
@@ -28,7 +28,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link active " aria-current="page" href="#home"
+                    <a  [routerLink]="['/']" class="nav-link active " aria-current="page"
                         style="color: rgb(184, 200, 212); font-weight: Bold; font-size: 25px;"><i class="fa fa-home"
                             aria-hidden="true"></i>Home</a>
                 </li>
