--- a/AngularApp/src/app/Appointment/appointment-read/appointment-read.component.html
+++ b/AngularApp/src/app/Appointment/appointment-read/appointment-read.component.html
@@ -40,8 +40,8 @@
     <tr
         *ngFor="let appoint of (appointmentService.AppiontList|filterbySpeciality:searchValue|sortComponent:direction:column:type)">
         <td>{{appoint._id}}</td>
-        <td>{{appoint.doctorId.doctorName}}</td>
-        <td>{{appoint.patientId?.patientName}}</td>
+        <td>{{appoint.doctorId|json}}</td>
+        <td>{{appoint.patientId|json}}</td>
         <td>{{appoint.startTime}}</td>
         <td>{{appoint.endTime}}</td>
         <td>{{appoint.medicalSpecialty}}</td>
