--- a/AngularApp/src/app/Patient/patient-read/patient-read.component.html
+++ b/AngularApp/src/app/Patient/patient-read/patient-read.component.html
@@ -1,37 +1,37 @@
 <table class="table table-striped table-hover">
     <tr>
         <th>
-            <label>Id</label>
+            <label>Id</label><br>
             <i appSortParams class="fa fa-arrow-up" (click)="sortIdAsc()"></i>
             <i appSortParams class="fa fa-arrow-down sorting" (click)="sortIdDesc()"></i>
         </th>
         <th>
-            <label class="fw-bold">Name</label>
+            <label class="fw-bold">Name</label><br>
             <i appSortParams class="fa fa-arrow-up" (click)="sortPatNameAsc()"></i>
             <i appSortParams class="fa fa-arrow-down sorting" (click)="sortPatNameDesc()"></i>
         </th>
         <th>
-            <label>SSN</label>
+            <label>SSN</label><br>
             <i appSortParams class="fa fa-arrow-up" (click)="sortSSNAsc()"></i>
             <i appSortParams class="fa fa-arrow-down sorting" (click)="sortSSNDesc()"></i>
         </th>
         <th>
-            <label>Phone</label>
+            <label>Phone</label><br>
             <i appSortParams class="fa fa-arrow-up" (click)="sortPhoneAsc()"></i>
             <i appSortParams class="fa fa-arrow-down sorting" (click)="sortPhoneDesc()"></i>
         </th>
         <th>
-            <label>Address</label>
+            <label>Address</label><br>
             <i appSortParams class="fa fa-arrow-up" (click)="sortAddressAsc()"></i>
             <i appSortParams class="fa fa-arrow-down sorting" (click)="sortAddressDesc()"></i>
         </th>
         <th>
-            <label>gender</label>
+            <label>gender</label><br>
             <i appSortParams class="fa fa-arrow-up" (click)="sortGenderAsc()"></i>
             <i appSortParams class="fa fa-arrow-down sorting" (click)="sortGenderDesc()"></i>
         </th>
         <th>
-            <label>Ins Id</label>
+            <label>Ins Id</label><br>
             <i appSortParams class="fa fa-arrow-up" (click)="sortInsuranceIdAsc()"></i>
             <i appSortParams class="fa fa-arrow-down sorting" (click)="sortInsuranceIdDesc()"></i>
         </th>
