--- a/AngularApp/src/app/home/home.component.html
+++ b/AngularApp/src/app/home/home.component.html
@@ -1,26 +1,11 @@
-<!-- <label style="width: 100px;" >Username</label>
-<input type="text" ><br><br>
-<label style="width: 100px;">Pasword</label>
-<input type="text" ><br><br>
-<label style="width: 100px;">Type </label>
-<input type="radio" name="type"  value="Nurse"   >
-<label>Nurse</label>
-<input type="radio" name="type" >
-<label>Reciptionist</label>
-<input type="radio" name="type" >
-<label>Office Boy </label>
-<input type="radio" name="type" >
-<label>Doctor</label><br>
-<button (click)="sign()">sign</button> -->
-
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <!------ Include the above in your HEAD tag ---------->
 <nav class="navbar navbar-expand-lg navbar navbar-light fixed-top " style="background-color: #172447;height: 75px;">
     <div class="container-fluid ">
-        <a class="navbar-brand" href="#"><i class="fa-solid fa-house-chimney-medical fa-3x text-warning"
-                style="width: 50px;"><label id="name">Injection 💉</label></i> </a>
+        <a class="navbar-brand"><i class="fa-solid fa-house-chimney-medical fa-2x text-white"
+                style="width: 40px;"><label id="name">Injection 💉</label></i> </a>
         <button class=" navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -29,7 +14,7 @@
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
                     <a  [routerLink]="['/']" class="nav-link active " aria-current="page"
-                        style="color: rgb(184, 200, 212); font-weight: Bold; font-size: 25px;"><i class="fa fa-home"
+                        style="color: rgb(255, 255, 255); font-weight: Bold; font-size: 25px;"><i class="fa fa-home"
                             aria-hidden="true"></i>Home</a>
                 </li>
 
@@ -38,7 +23,7 @@
     </div>
 </nav>
 
-<div class="container register" style="margin-top: 80px;">
+<div class="container register" style="margin-top: 100px;">
     <div class="row">
         <div class="col-md-3 register-left">
             <img src="../../assets/doctor.png" alt="" style="width: 150px;" />
