--- a/AngularApp/src/app/Medicine/medicine-create/medicine-create.component.html
+++ b/AngularApp/src/app/Medicine/medicine-create/medicine-create.component.html
@@ -2,13 +2,51 @@
 <div>
 <form #form="ngForm">
 <label style="width: 100px;">Id </label>
-<input name="id"type="text" [(ngModel)]="medicineService.nMedicine._id" required><br><br>
+<input name="id"type="number" min="1" #id="ngModel" [(ngModel)]="medicineService.nMedicine._id" required
+[ngClass]="{'invalid-input': form.submitted && !id.valid}"><br><br>
+<div *ngIf="id.invalid && (id.dirty || id.touched )">
+   <div class="valid" *ngIf="id.errors?.['required']">
+       Id is required
+   </div>
+</div>
+
 <label style="width: 100px;">Name </label>
-<input name="name" type="text" [(ngModel)]="medicineService.nMedicine.medicineName" required><br><br>
+<input name="name" #name="ngModel" type="text" [(ngModel)]="medicineService.nMedicine.medicineName" required
+[ngClass]="{'invalid-input': form.submitted && !name.valid}" minlength="3"><br><br>
+<div *ngIf="name.invalid && (name.dirty || name.touched )">
+   <div class="valid" *ngIf="name.errors?.['required']">
+      Name is required
+   </div>
+   <div class="valid" *ngIf="name.errors?.['minlength']">
+    Name at least 3 char
+ </div>
+</div>
+
 <label style="width: 100px;">Brand </label>
-<input name="brand" type="text" [(ngModel)]="medicineService.nMedicine.brand" required><br><br>
+<input name="brand" #brand="ngModel" type="text" [(ngModel)]="medicineService.nMedicine.brand" required
+[ngClass]="{'invalid-input': form.submitted && !brand.valid}" minlength="3"><br><br>
+<div *ngIf="brand.invalid && (brand.dirty || brand.touched )">
+   <div class="valid" *ngIf="brand.errors?.['required']">
+    Brand is required
+   </div>
+   <div class="valid" *ngIf="brand.errors?.['minlength']">
+    Brand at least 3 char
+ </div>
+</div>
+
+
 <label style="width: 100px;">Description </label>
-<input name="description" type="text" [(ngModel)]="medicineService.nMedicine.description" required><br><br>
+<input name="description" #description="ngModel" type="text" [(ngModel)]="medicineService.nMedicine.description" required
+[ngClass]="{'invalid-input': form.submitted && !description.valid}" minlength="3"><br><br>
+<div *ngIf="description.invalid && (description.dirty || description.touched )">
+   <div class="valid" *ngIf="description.errors?.['required']">
+    Description is required
+   </div>
+   <div class="valid" *ngIf="description.errors?.['minlength']">
+    Description at least 3 char
+ </div>
+</div>
+
 <input type="button" style="margin-left: 36%;" [disabled]="form.invalid" (click)="save()" value="Add">
 <input type="button" [disabled]="form.invalid"  (click)="update()" value="Update">
 </form>
