--- a/AngularApp/src/app/home-copy/home-copy.component.html
+++ b/AngularApp/src/app/home-copy/home-copy.component.html
@@ -3,15 +3,17 @@
 
     <nav class="navbar navbar-expand-lg navbar navbar-light fixed-top " style="background-color: #172447;height: 75px;">
         <div class="container-fluid ">
-            <a class="navbar-brand" href="#"><i class="fa-solid fa-house-chimney-medical fa-3x text-warning"
-                    style="width: 50px;"><label id="name">Injection 💉</label></i> </a>
-            <button class=" navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+            <div class="container-fluid ">
+                <a class="navbar-brand"><i class="fa-solid fa-house-chimney-medical fa-2x text-white"
+                        style="width: 40px;"><label id="name" class="text-white" style="font-style: italic;">Injection 💉</label></i> </a>
+                <button class=" navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                </div>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link active " aria-current="page" [routerLink]="['/']"
                             style="color: rgb(184, 200, 212);">Home</a>
                     </li>
@@ -20,12 +22,12 @@
                     </li>
                     <li class="nav-item">
                         <a style="color: rgb(184, 200, 212);" class="nav-link   " href=" #contactus">ContactUs</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item ms-3  ">
                         <a (click)="login()" style="background-color: rgb(63, 87, 109);border-radius: 3px;"
                             class="nav-link data-bs-toggle= text-light" style="cursor: pointer;" model data-bs-target="#mymodel"><i
-                                class="fa fa-sign-in text-primary" aria-hidden="true"></i>
-                            Login</a>
+                                class="fa fa-sign-in text-primary text-white p-3 fw-bold" style="font-size: 27px;"  aria-hidden="true">Login</i>
+                            </a>
                     </li>
 
                 </ul>
