--- a/AngularApp/src/app/User/sign-in/sign-in.component.html
+++ b/AngularApp/src/app/User/sign-in/sign-in.component.html
@@ -38,7 +38,7 @@
                     <span>Admin </span>
                 </label>
                 <label class="radio col-md-4">
-                    <input type="radio" name="type" value="doctor" [(ngModel)]="type">
+                    <input type="radio" name="type" value="Doctor" [(ngModel)]="type">
                     <span>Doctor </span>
                 </label>
                 <br>
