--- a/AngularApp/src/app/Invoice/invoice-read/invoice-read.component.html
+++ b/AngularApp/src/app/Invoice/invoice-read/invoice-read.component.html
@@ -40,8 +40,8 @@
             <td>{{invoice.taxOfBill}}</td>
             <td>{{invoice.dateOfBill|date}}</td>
             <td>{{invoice.payment}}</td>
-            <a [routerLink]="['edit',invoice._id]"><i class="fa fa-edit" aria-hidden="true"
-                    style="font-weight: bold; font-size: larger;"></i></a>
+            <td><a [routerLink]="['edit',invoice._id]"><i class="fa fa-edit" aria-hidden="true"
+                    style="font-weight: bold; font-size: larger;"></i></a></td> 
             <td>
                 <app-invoice-delete [invoice]="invoice"></app-invoice-delete>
             </td>
