--- a/AngularApp/src/app/Prescription/prescription-read/prescription-read.component.html
+++ b/AngularApp/src/app/Prescription/prescription-read/prescription-read.component.html
@@ -1,4 +1,4 @@
-<table class="table table-striped table-hover">
+<table class="table table-striped table-hover ">
     <thead>
         <tr>
             <th>
@@ -49,8 +49,8 @@
             <td>{{prescript.medicineId?.medicineName}}</td>
             <td>{{prescript.numberOfDoses}}</td>
             <td>{{prescript.dateOfPrescript}}</td>
-            <a [routerLink]="['edit',prescript._id]"><i class="fa fa-edit" aria-hidden="true"
-                    style="font-weight: bold; font-size: larger;"></i></a>
+            <td><a [routerLink]="['edit',prescript._id]"><i class="fa fa-edit" aria-hidden="true"
+                    style="font-weight: bold; font-size: larger;"></i></a></td>
             <td>
                 <app-prescription-delete [prescription]="prescript"></app-prescription-delete>
             </td>
